--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <title>Document</title>
   </head>
   <body>
@@ -18,6 +19,7 @@
             <li><a href="">Giỏ hàng</a></li>
         </ul>
     </div>
+
     <div id="menu2">
         <ul>
             <li><a href="">điện thoại</a></li>
